# SpikeBudget

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/dclm_protocol_diagnostics/: dclm_step68100_protocol_debug.md
artifacts/dense_low_lr_scratch_screen/: best_summary.json  dense_low_lr_scratch_screen_results.tsv  dense_low_lr_scratch_screen_summary.md  log_snippets.md
artifacts/external_evidence_summaries/: README.md  key_evidence_summaries.tsv
artifacts/external_gate_summaries/: README.md  key_gate_summaries.tsv
artifacts/external_scratch_summaries/: README.md  best_scratch_checkpoint.tsv  key_scratch_summaries.tsv
artifacts/gate129_dense_scaling/: best_summary.json  gate129_dense_scaling_results.tsv  gate129_dense_scaling_summary.md  gate129_theory_summary.tsv  log_snippets.md
artifacts/gate74_diagnostics/: gate74_step68100_benchmark_protocol_debug.md
configs/: dclm_protocol_3090_long.yaml  dense_low_lr_scratch_screen.yaml  gate129_dense_screen.yaml  gate74_7b_3090_smoke.yaml  gate74_dclm_3090_long.yaml  rtx3090_7b_memory_feasibility_smoke.yaml
data/: gates.yaml  technology_milestones.yaml
docs/: compute_bound_evidence.md  gates.md  limitations.md  reproduce_3090.md  technology_milestones.md
docs/superpowers/plans/: 2026-06-01-public-gate-reproducibility.md  (+1 more)
examples/: full_gpu_runner.py
scripts/: validate_repo.py
spikebudget/: __init__.py  config.py  evidence.py  gates.py  training.py
tests/: test_config.py  test_evidence.py  test_gates.py  test_training.py  test_validate_repo.py
(+2 files in other folders)
