[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spikebudget"
version = "0.1.0"
description = "Public reproducibility scaffold for RTX 3090-class SNN pretraining evidence."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["spikebudget*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
